# Random-Number-Gods

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Readme.md  configure  constant.c  constant.h  constant_check.c  dethread.c  dethread.h  dethread_check.c  lcg.c  lcg.h  randu.c  randu.h  randu_check.c  rng-private.h  rng.c  rng.h  rng_check.c  rngod.c  rngod.h  rngod.pc  rngod_check.c  sequence.c  sequence.h  sequence_check.c  temple.c  temple.h  xorshift.c  xorshift.h  xorshift_check.c
.github/workflows/: cmake.yml  codeql-analysis.yml
